# horseshoe

./: .gitignore  README.md  pyproject.toml
scripts/: gibbs.py  multivariate.py
