[tool.poetry]
name = "horseshoe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "horseshoe", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
jupyter = "^1.0.0"
jax = "^0.4.23"
jaxtyping = "^0.2.25"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
blackjax = "^1.1.0"
distrax = "^0.1.5"
cmdstanpy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
